--- a/front/package.json
+++ b/front/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "google-map-react": "^2.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "react-toastify": "^9.1.3",
+    "sweetalert2": "^11.7.27"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
