--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "google-map-react": "^2.2.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
