--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@react-google-maps/api": "^2.19.2",
     "axios": "^1.5.0",
     "google-map-react": "^2.2.1",
     "jsonwebtoken": "^9.0.2",
@@ -31,6 +35,6 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.9"
   }
 }
